# crudapphoras

./: README.md  crud_taxonomia.py  pyproject.toml
