[tool.poetry]
name = "crudapphoras"
version = "0.1.0"
description = ""
authors = ["Bruno Mesquita Zamberlan <brunomesquitazamberlan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
pandas = "^2.2.3"
firebase-admin = "^6.5.0"
firebase = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
